--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -935,6 +935,7 @@ en:
     errors:
       cannot_update: You do not have permission to update this comment
     actions:
+      conversation_url: Conversation page
       confirm_delete: Are you sure you want to delete this comment?
       convert_task: Convert to task
       edit: Edit comment
