--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -1540,11 +1540,12 @@ ko:
         login: "로그인하기 위한 계정이 필요합니다. 계정이름으로 다른사람들이 당신을 찾을 수 있습니다. 반드시 소문자를 쓰고, 공백은 허용되지 앟습니다. _ 문자를 사용 가능합니다."
         password: "글자와 숫자, 대소문자 조합으로 패스워드를 설정하는것이 좋습니다."
         phone: "전화번호는 동료들에게 공개됩니다. 완전하게 기입하여 주십시오. +82가 한국 지역번호 입니다. 010으로 시작하는 번호는 +8210으로 기입하시면 됩니다,  (예시) +821011112222"
+      new:
+        use_this_email: "이 이메일 주소로 프로젝트를 공유할 수 있는 초대권을 받으셨습니다. 만약 이 프로젝트들에 접근하시고 싶으시다면 이메일을 변경하지 말아주세요. 등록 절차를 한번 거치고 나서 이메일 주소를 수정할 수 있습니다."
     new: 
       existing_user: "이미 걔정을 가지고 있다면, <a href='%{login_url}'>로그인 하거나</a> 또는 <a href='%{forgot_url}'>아이디 를 찾으세요.</a>."
       no_public_signup: "계정을 만들어야 접속하실 수 있습니다."
       submit: "계정 생성"
-      use_this_email: "이 이메일 주소로 프로젝트를 공유할 수 있는 초대권을 받으셨습니다. 만약 이 프로젝트들에 접근하시고 싶으시다면 이메일을 변경하지 말아주세요. 등록 절차를 한번 거치고 나서 이메일 주소를 수정할 수 있습니다."
       title: "새 계정 생성"
       you_already_have_an_account: "다음 이메일 주소로 이미 계정이 있습니다. %{email}. <a href='%{login_link}'>이메일로 로그인</a> 또는 <a href='%{reset_password_link}'>비밀번호 재설정</a> if you forgot it."
       you_are_logged_in: "이미 계정이 있습니다. 로그아웃하시고 해당 유저로 접속해 주세요."
